added media queries

--- a/src/app/pages/education/components/education-sub-category/education-sub-category.component.html
+++ b/src/app/pages/education/components/education-sub-category/education-sub-category.component.html
@@ -1,18 +1,19 @@
 <div class="sub-category-container">
-  <p class="title">{{categoryInfo.title}}</p>
-  <div class="filter-container">
-
-  </div>
-  <div class="category-item-container">
-    <dsod-education-item-card></dsod-education-item-card>
-    <dsod-education-item-card></dsod-education-item-card>
-    <dsod-education-item-card></dsod-education-item-card>
-    <dsod-education-item-card></dsod-education-item-card>
-    <dsod-education-item-card></dsod-education-item-card>
-    <dsod-education-item-card></dsod-education-item-card>
-    <dsod-education-item-card></dsod-education-item-card>
-    <dsod-education-item-card></dsod-education-item-card>
-    <dsod-education-item-card></dsod-education-item-card>
-    <dsod-education-item-card></dsod-education-item-card>
+  <div class="container">
+    <p class="title">{{categoryInfo.title}}</p>
+    <div class="filter-container">
+    </div>
+    <div class="category-item-container">
+      <dsod-education-item-card></dsod-education-item-card>
+      <dsod-education-item-card></dsod-education-item-card>
+      <dsod-education-item-card></dsod-education-item-card>
+      <dsod-education-item-card></dsod-education-item-card>
+      <dsod-education-item-card></dsod-education-item-card>
+      <dsod-education-item-card></dsod-education-item-card>
+      <dsod-education-item-card></dsod-education-item-card>
+      <dsod-education-item-card></dsod-education-item-card>
+      <dsod-education-item-card></dsod-education-item-card>
+      <dsod-education-item-card></dsod-education-item-card>
+    </div>
   </div>
 </div>
