--- a/src/app/pages/education/container/education-container.component.scss
+++ b/src/app/pages/education/container/education-container.component.scss
@@ -8,6 +8,20 @@
   width: 60%;
   margin: auto;
 }
+
 .content-wrapper {
   padding-top: 50px;
+}
+
+@media only screen and (max-width:1440px) {
+
+  .image-header-container {
+    height: 295px;
+
+    .banner-caption {
+      h1 {
+        font-size: 35px;
+      }
+    }
+  }
 }
