--- a/src/app/pages/events/components/card/event-card.component.scss
+++ b/src/app/pages/events/components/card/event-card.component.scss
@@ -3,8 +3,9 @@
 .event-card {
   &.focused {
     -webkit-box-shadow: 0px 0px 18px 0px rgba(24, 152, 205, 0.5);
-            box-shadow: 0px 0px 18px 0px rgba(24, 152, 205, 0.5);
+    box-shadow: 0px 0px 18px 0px rgba(24, 152, 205, 0.5);
   }
+
   background: $alabaster_white;
   margin: 12px 0;
   cursor: pointer;
@@ -15,10 +16,13 @@
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     padding: 3px 6px;
     position: relative;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
 
     span.header-logo {}
 
@@ -29,12 +33,13 @@
       border-left: 1px solid #fff;
       margin-left: 13px;
     }
+
     span.delete-icon {
       position: absolute;
       right: 7px;
       top: 50%;
       -webkit-transform: translateY(-50%);
-              transform: translateY(-50%);
+      transform: translateY(-50%);
       height: 25px;
       width: 25px;
       border-radius: 50%;
@@ -43,20 +48,21 @@
       display: -ms-flexbox;
       display: flex;
       -webkit-box-align: center;
-          -ms-flex-align: center;
-              align-items: center;
+      -ms-flex-align: center;
+      align-items: center;
       -webkit-box-pack: center;
-          -ms-flex-pack: center;
-              justify-content: center;
+      -ms-flex-pack: center;
+      justify-content: center;
       color: #fff;
       font-size: 17px;
       padding: 0px 0px 2px 0px;
       background-color: #dc3545;
       -webkit-transition: 0.2s all ease;
       transition: 0.2s all ease;
-      &:hover{
+
+      &:hover {
         -webkit-box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.5);
-                box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.5);
+        box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.5);
       }
     }
   }
@@ -66,16 +72,16 @@
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     background: $alabaster_white;
     padding: 9px 7px;
 
     span.event-level {
-      font-size: 19px;
+      font-size: 15px;
       border-radius: 3px;
       border: 1px solid $color-strokes;
       color: $text-main;
@@ -89,7 +95,7 @@
     }
 
     span.level-text {
-      font-size: 22px;
+      font-size: 18px;
       color: $color-primary;
       font-weight: bold;
       text-transform: uppercase;
@@ -112,7 +118,7 @@
 
     h3 {
       border-top: 1px solid $color-primary;
-      font-size: 22px;
+      font-size: 16px;
       line-height: 30px;
       font-family: $Arial;
       padding-top: 8px;
@@ -121,7 +127,7 @@
     }
 
     span {
-      font-size: 20px;
+      font-size: 18px;
       font-style: italic;
       line-height: 26px;
       font-family: $Arial;
@@ -134,6 +140,7 @@
       margin-top: 15px;
       padding-bottom: 11px;
       border-bottom: 1px solid $color-primary;
+      min-height: 120px;
 
       a {
         color: $deep-cerulean;
@@ -147,10 +154,10 @@
     .event-timing {
       display: -webkit-box;
       display: -ms-flexbox;
-      display: flex;      
-      -webkit-box-pack: justify;      
-          -ms-flex-pack: justify;      
-              justify-content: space-between;
+      display: flex;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+      justify-content: space-between;
       padding: 9px 0 6px;
 
       span {
@@ -158,24 +165,28 @@
         font-family: $helvetica_font;
         font-weight: 700;
       }
-      .form-control-small{
+
+      .form-control-small {
         width: 120px;
       }
-      .date-pick{
-        input.form-control{
+
+      .date-pick {
+        input.form-control {
           position: absolute;
           width: 0;
           height: 0;
           opacity: 0;
           z-index: -999;
         }
-        button.calendar{
+
+        button.calendar {
           color: $text-main;
           height: auto;
           width: auto;
         }
       }
     }
+
     button {
       display: inline-block;
       outline: none;
@@ -183,8 +194,9 @@
       background: none;
       height: auto;
     }
+
     .event-city {
-      font-size: 17px;
+      font-size: 16px;
       font-family: $helvetica_font;
       font-weight: normal;
     }
@@ -194,11 +206,11 @@
       display: -ms-flexbox;
       display: flex;
       -webkit-box-pack: end;
-          -ms-flex-pack: end;
-              justify-content: flex-end;
+      -ms-flex-pack: end;
+      justify-content: flex-end;
       padding: 21px 5px 8px;
 
-      
+
 
       button.card-action {
         font-size: 20px;
@@ -211,8 +223,8 @@
         display: -ms-flexbox;
         display: flex;
         -webkit-box-align: center;
-            -ms-flex-align: center;
-                align-items: center;
+        -ms-flex-align: center;
+        align-items: center;
         position: relative;
 
         &::before {
@@ -227,22 +239,111 @@
       }
 
       button.register-btn {
-        font-size: 20px;
+        font-size: 18px;
         font-family: $neue_hgd_Roman;
         color: $color-white;
         padding: 6px 12px;
         background: $color-secondary;
         -ms-flex-item-align: center;
-            align-self: center;
-        &.register-enabled{
+        align-self: center;
+
+        &.register-enabled {
           background: $layout-blue;
         }
       }
     }
   }
-  select.form-control{
+
+  select.form-control {
     padding-top: 0;
     height: 33px;
     cursor: pointer;
+  }
+}
+
+
+@media only screen and (max-width:1440px) {
+  .event-card {
+    .event-card-header {
+      .header-logo {
+        max-width: 120px;
+
+        img {
+          max-width: 100%;
+        }
+      }
+
+      span.sponsored-by {
+        font-size: 14px;
+      }
+    }
+
+    .event-card-level {
+      span.level-text {
+        font-size: 14px;
+      }
+
+      span.event-level {
+        font-size: 14px;
+      }
+    }
+
+    .card-content {
+      h3 {
+        font-size: 15px;
+        max-height: 58px;
+        overflow: hidden;
+        line-height: 23px;
+      }
+
+      span {
+        font-size: 15px;
+        font-weight: 600;
+      }
+
+      p {
+        font-size: 14px;
+        margin-top: 5px;
+      }
+    }
+
+    .event-card-footer {
+      .event-timing {
+        span {
+          font-size: 14px;
+        }
+        .form-control-small {
+          width: 50px;
+          padding-left: 0;
+          padding-right: 0;
+        }
+      }
+
+      .event-city {
+        font-size: 14px;
+      }
+
+      .register-btn-wrap {
+        padding: 10px 5px 8px;
+
+        button.card-action {
+          font-size: 24px;
+
+          &::before {
+            height: 36px;
+          }
+        }
+
+        button.register-btn {
+          font-size: 16px;
+        }
+      }
+    }
+
+    select.form-control {
+      height: 27px;
+      margin: -3px 0;
+      font-size: 14px;
+    }
   }
 }
