--- a/src/app/pages/podcast/components/podcast-content/podcast-content.component.scss
+++ b/src/app/pages/podcast/components/podcast-content/podcast-content.component.scss
@@ -4,28 +4,34 @@
   /deep/ audio {
     display: none;
   }
+
   /deep/ p {
     font-size: 18px;
     line-height: 28px;
+
     a {
       color: $deep-cerulean;
     }
   }
+
   h2 {
     font-size: 30px;
     font-family: $Arial;
     margin-bottom: 45px;
   }
+
   /deep/ h2 {
     margin: 25px 0;
     font-size: 22px;
     font-family: $Arial;
     font-style: italic;
   }
+
   /deep/ ol {
     padding: 0 0 0 60px;
     margin-top: 30px;
     counter-reset: li;
+
     li {
       position: relative;
       color: $text-main;
@@ -34,6 +40,7 @@
       padding: 0 50px;
       margin-bottom: 25px;
       counter-increment: li;
+
       // list-style: disc;
       &::before {
         content: counter(li)".";
@@ -48,15 +55,18 @@
         line-height: 35px;
         font-weight: 700;
       }
+
       i {
         color: $color-primary;
       }
     }
   }
+
   /deep/ ul {
     padding: 0 0 0 60px;
     margin-top: 30px;
     counter-reset: li;
+
     li {
       position: relative;
       color: $text-main;
@@ -65,6 +75,7 @@
       padding: 0 50px;
       margin-bottom: 25px;
       counter-increment: li;
+
       // list-style: disc;
       &::before {
         content: counter(li)".";
@@ -79,12 +90,45 @@
         line-height: 35px;
         font-weight: 700;
       }
+
       i {
         color: $color-primary;
       }
     }
   }
 }
+
 .podcasts-list {
   padding-top: 15px;
+}
+
+
+@media only screen and (max-width:1440px) {
+  .speakers-content {
+    /deep/ p {
+      font-size: 16px;
+    }
+
+    /deep/ ul {
+      li {
+        font-size: 16px;
+        margin-bottom: 8px;
+
+        &::before {
+          font-size: 18px;
+        }
+      }
+    }
+
+    /deep/ ol {
+      li {
+        font-size: 16px;
+        margin-bottom: 8px;
+
+        &::before {
+          font-size: 18px;
+        }
+      }
+    }
+  }
 }
