--- a/src/app/pages/podcast/components/podcast-header/podcast-header.component.scss
+++ b/src/app/pages/podcast/components/podcast-header/podcast-header.component.scss
@@ -16,5 +16,21 @@
       color: $color-primary;
       font-family: $Arial;
     }
+  }  
+}
+
+@media only screen and (max-width:1440px){
+  :host {
+    .top-head {
+      .pod-title {
+        h3 {
+          font-size: 24px;
+        }
+      }
+
+      >span {
+        font-size: 19px;
+      }
+    }
   }
 }
