--- a/src/app/pages/podcast/containers/podcast-page.component.html
+++ b/src/app/pages/podcast/containers/podcast-page.component.html
@@ -5,10 +5,10 @@
         <dsod-podcast-header [content]="pageContent$ | async"></dsod-podcast-header>
         <div class="podcast-player" *ngIf="content">
           <div class="row">
-            <div class="col-2">
+            <div class="col-2 pod-thumbnail">
               <dsod-content-author [podcast]="content"></dsod-content-author>
             </div>
-            <div class="col-10">
+            <div class="col-10 pod-visual">
               <dsod-audio-player [content]="pageContent$ | async"></dsod-audio-player>
             </div>
           </div>
