--- a/src/app/pages/podcast/containers/podcast-page.component.scss
+++ b/src/app/pages/podcast/containers/podcast-page.component.scss
@@ -2,24 +2,8 @@
 
 
 .podcast-intro {
-  .top-head {
-    padding-top: 77px;
-    border-bottom: 2px solid #c0cad1;
-
-    .pod-title {
-      h3 {
-        font-size: 30px;
-        color: $boulder_grey;
-        margin-left: 15px;
-        font-family: $Arial;
-      }
-    }
-
-    >span {
-      font-size: 22px;
-      color: $color-primary;
-      font-family: $Arial;
-    }
+  /deep/ .top-head {
+    padding: 20px 20px 20px 0;
   }
 }
 
@@ -50,20 +34,25 @@
 
 .podcast-player {
   margin-bottom: 115px;
-  .link-icon{
-    font-size:35px;
-    color: $text-main; 
-    .fa{
+
+  .link-icon {
+    font-size: 35px;
+    color: $text-main;
+
+    .fa {
       color: #8799A7;
     }
   }
 }
 
 .subscribe-today {
-  background: url("../../../../assets/images/join-us.png") no-repeat center center / cover;
+  background: url("../../../../assets/images/join-us.png");
   min-height: 1027px;
   border: 3px solid $light_grey;
   margin-top: 20px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
 
   h3 {
     color: $color-white;
@@ -122,11 +111,14 @@
   padding-top: 20px;
 
   .join-ad-inner {
-    background: url("../../../../assets/images/join-bg.png") no-repeat center center / cover;
+    background: url("../../../../assets/images/join-bg.png");
     height: 1006px;
     position: relative;
     border: 3px solid $light_grey;
     margin-bottom: 30px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
 
     .join-ad-header {
       padding: 15px;
@@ -185,6 +177,23 @@
         font-size: 21px;
         color: $black;
       }
+    }
+  }
+}
+
+@media only screen and (max-width:1440px) {
+  .podcast-intro {
+    /deep/ .top-head {
+      padding: 20px 50px 20px 0;
+    }
+  }
+  .podcast-player {
+    .pod-thumbnail {
+      max-width: 25%;
+    }
+
+    .pod-visual {
+      max-width: 75%;
     }
   }
 }
