--- a/src/app/pages/video/containers/video-page/video-page.component.html
+++ b/src/app/pages/video/containers/video-page/video-page.component.html
@@ -24,7 +24,7 @@
             </div>
             <dsod-rating></dsod-rating>
           </div>
-          <div class="video-header">
+          <div class="video-header article-header">
             <div class="row">
               <div class="col-10">
                 <dsod-video-title [content]="pageContent$ | async"></dsod-video-title>
