--- a/src/app/pages/video/components/video-content/video-content.component.scss
+++ b/src/app/pages/video/components/video-content/video-content.component.scss
@@ -9,14 +9,15 @@
       div {
         padding-top: 0 !important;
       }
-      span{
+
+      span {
         position: relative !important;
-        top: auto!important;
-        right:  auto!important;
-        bottom: auto!important;
-        left: auto!important;
-        width: auto!important;
-        height: auto!important;
+        top: auto !important;
+        right: auto !important;
+        bottom: auto !important;
+        left: auto !important;
+        width: auto !important;
+        height: auto !important;
       }
     }
 
@@ -141,3 +142,25 @@
     }
   }
 }
+
+
+@media only screen and (max-width:1440px) {
+  :host {
+    .video-content-inner {
+      /deep/ p {
+        font-size: 16px;
+      }
+
+      /deep/ ul {
+        li {
+          font-size: 17px;
+          line-height: 33px;
+          padding: 0 50px 0 0;
+          margin-bottom: 14px;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width:1366px) {}
