--- a/src/app/pages/events/components/training/training.component.scss
+++ b/src/app/pages/events/components/training/training.component.scss
@@ -13,11 +13,12 @@
        text-align: center;
        padding: 0 10px 70px;
        background: rgb(0, 0, 0);
+       background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.8575805322128851)), to(rgba(255, 255, 255, 0)));
        background: linear-gradient(0deg, rgba(0, 0, 0, 0.8575805322128851) 0%, rgba(255, 255, 255, 0) 100%);
 
        h3 {
-         font-size: 65px;
-         line-height: 70px;
+         font-size: 46px;
+         line-height: 54px;
          color: $color-white;
          border-bottom: 1px solid $color-primary;
          padding-bottom: 15px;
@@ -27,9 +28,9 @@
        }
 
        h4 {
-         font-size: 45px;
+         font-size: 35px;
          color: $color-white;
-         line-height: 55px;
+         line-height: 45px;
          font-family: $Arial;
        }
      }
@@ -38,17 +39,17 @@
    .events-training-content {
      p {
        line-height: 30px;
-       font-size: 17px;
+       font-size: 16px;
        font-family: $Arial;
        margin-bottom: 30px;
      }
 
      ul {
        margin-bottom: 10px;
-       padding-left: 35px;
+       padding-left: 25px;
 
        li {
-         font-size: 17px;
+         font-size: 16px;
          line-height: 30px;
          font-weight: 700;
          font-family: $Arial;
@@ -63,13 +64,19 @@
      text-align: center;
 
      h3 {
-       font-size: 30px;
+       font-size: 25px;
        font-family: $Arial;
      }
 
      ul {
+       display: -webkit-box;
+       display: -ms-flexbox;
        display: flex;
+       -webkit-box-align: center;
+       -ms-flex-align: center;
        align-items: center;
+       -webkit-box-pack: center;
+       -ms-flex-pack: center;
        justify-content: center;
        margin-top: 30px;
 
@@ -80,6 +87,42 @@
 
          &:last-child {
            border-right: none;
+         }
+       }
+     }
+   }
+
+   @media only screen and (max-width:1440px) {
+     .come-with-us {
+       .come-with-content {
+         padding: 0 10px 20px;
+
+         h3 {
+           font-size: 36px;
+           line-height: 41px;
+         }
+
+         h4 {
+           font-size: 29px;
+           line-height: 33px;
+         }
+       }
+     }
+
+     .corporate-sponsors {
+       h3 {
+         font-size: 18px;
+        }
+       ul {
+             margin-top: 6px;
+             margin-bottom: 0;
+         li {
+           list-style: none;
+           max-width: 33.3%;
+           border: none;
+           img{
+             max-width: 100%;
+           }
          }
        }
      }
