--- a/src/app/pages/sponsors/components/sponsor-posts/sponsor-posts.component.scss
+++ b/src/app/pages/sponsors/components/sponsor-posts/sponsor-posts.component.scss
@@ -5,12 +5,15 @@
     width: 70%;
     background-color: $color-white;
     margin: auto auto 70px;
+
     &.last-post {
       width: 80%;
       margin-bottom: 0;
     }
+
     .sponsor-desc {
       padding: 50px;
+
       .sponsor-header {
         h3 {
           font-size: 18px;
@@ -20,11 +23,13 @@
           margin-bottom: 30px;
         }
       }
+
       h2 {
         font-size: 26px;
         font-weight: bold;
         margin-bottom: 30px;
       }
+
       >span {
         font-size: 18px;
         display: block;
@@ -32,13 +37,16 @@
         color: $dusty-gray;
         font-weight: bold;
       }
+
       .date-wrap {
         margin-bottom: 28px;
+
         span {
           font-size: 18px;
           display: block;
           color: $dusty-gray;
         }
+
         a {
           display: inline-block;
           padding: 4px 15px;
@@ -49,42 +57,113 @@
           border-radius: 3px;
         }
       }
+
       .excerpt {
         font-size: 18px;
         color: $dusty-gray;
+
         /deep/ p {
           font-size: 18px;
           color: $dusty-gray;
         }
       }
+
       a.read-more-btn {
         font-size: 16px;
         color: $dusty-gray;
       }
+
       .bg-red {
         background: $thunderbird;
       }
+
       .bg-blue {
         background: $bg-blue;
       }
+
       .bg-black {
         background: $lisbon-brown;
       }
     }
+
     .thumbnail {
       padding: 0;
+
       img {
         width: 100%;
       }
     }
   }
+
   .load-more-container {
     padding: 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+
     .btn-load-more {
       width: 250px;
+    }
+  }
+}
+
+
+@media only screen and (max-width:1440px) {
+  .sponsor-post-container {
+    .post-container {
+      width: 85%;
+
+      .sponsor-desc {
+        padding: 50px 20px;
+
+        .sponsor-header {
+          h3 {
+            font-size: 16px;
+            padding: 13px;
+            margin-bottom: 15px;
+          }
+        }
+
+        h2 {
+          font-size: 20px;
+          margin-bottom: 15px;
+        }
+
+        >span {
+          font-size: 16px;
+          margin-bottom: 10px;
+        }
+
+        .date-wrap {
+          span {
+            font-size: 16px;
+          }
+
+          a {
+            font-size: 16px;
+          }
+        }
+
+        .excerpt {
+          font-size: 16px;
+          max-height: 100px;
+          overflow: hidden;
+          display: block;
+
+          /deep/ p {
+            font-size: 16px;
+            max-height: 100px;
+            overflow: hidden;
+            display: block;
+          }
+        }
+      }
     }
   }
 }
