--- a/src/app/pages/sponsors/container/sponsors-container.component.scss
+++ b/src/app/pages/sponsors/container/sponsors-container.component.scss
@@ -2,6 +2,7 @@
 
 .header-container {
   background-color: $alabaster_white;
+
   .image-header-container {
     background-image: url('../../../../assets/images/sponsors_header.png');
     height: 400px;
@@ -17,4 +18,18 @@
 .content-wrapper {
   padding-top: 50px;
   background-color: $alabaster_white;
+}
+
+@media only screen and (max-width:1440px) {
+  .header-container {
+    .image-header-container {
+      height: 295px;
+
+      .banner-caption {
+        h1 {
+          font-size: 35px;
+        }
+      }
+    }
+  }
 }
