--- a/src/app/shared/components/featured-media/featured-media.component.html
+++ b/src/app/shared/components/featured-media/featured-media.component.html
@@ -1,3 +1,3 @@
 <div class="article-thumbnail" *ngIf="featuredMedia">
-  <img src={{featuredMedia?.code?.originalUrl}} class="img-fluid" alt="">
+  <img src={{featuredMedia?.code?.originalUrl}} class="img-fluid w-100 mt-2 mb-3" alt="">
 </div>
