--- a/src/app/shared/components/related-content/related-content.component.scss
+++ b/src/app/shared/components/related-content/related-content.component.scss
@@ -22,3 +22,17 @@
     }
   }
 }
+
+@media only screen and (max-width:1440px){
+  :host {
+    .block-content {
+      h2.topic-title {
+        font-size: 16px;
+      }
+
+      p {
+        font-size: 14px;
+      }
+    }
+  }
+}
