removed links and fixed view issue on wider screen

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="profile-out-click-container" [ngClass]="{'hide': !(isOpenedProfilePanel$ | async)}" (click)="onClickedOutProfilePanel()"></div>
 <div class="nav-wrapper" onScroll-update>
-  <div class="container-fluid">
+  <div class="header-container">
     <div class="d-flex justify-content-between align-items-center">
       <div class="brand">
         <a [routerLink]="['/']"><img class="img img-fluid" src="assets/images/dso-logo.png"></a>
