--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,6 @@
-<dsod-carousel [loggedIn]="isLoggedIn$ | async"></dsod-carousel>
+<div class="banner-container">
+  <dsod-carousel [loggedIn]="isLoggedIn$ | async"></dsod-carousel>
+</div> 
 <dsod-home-ad-banner></dsod-home-ad-banner>
 <dsod-featured-topics [featuredTopics]="featuredTopics$ | async"></dsod-featured-topics>
 <div class="container">
