--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,9 @@
 <div class="banner-container">
   <dsod-carousel [loggedIn]="isLoggedIn$ | async"></dsod-carousel>
 </div> 
-<dsod-home-ad-banner></dsod-home-ad-banner>
+<a [routerLink]="['/sponsors/GSK']">
+  <dsod-home-ad-banner></dsod-home-ad-banner>
+</a>
 <dsod-featured-topics [featuredTopics]="featuredTopics$ | async"></dsod-featured-topics>
 <div class="container">
   <div class="row">
