--- a/src/app/pages/sponsors/components/sponsor-posts/sponsor-posts.component.html
+++ b/src/app/pages/sponsors/components/sponsor-posts/sponsor-posts.component.html
@@ -21,7 +21,9 @@
         </div>
       </div>
       <div class="col-6 thumbnail">
-        <img *ngIf="post.featuredMedia" class="img-fluid" src="{{post.featuredMedia.code.originalUrl}}" alt="">
+        <div class="img-container">
+          <img *ngIf="post.featuredMedia" class="img-fluid" src="{{post.featuredMedia.code.originalUrl}}" alt="">
+        </div>
       </div>
     </div>
   </div>
