--- a/src/app/pages/sponsors/components/sponsor-posts/sponsor-posts.component.scss
+++ b/src/app/pages/sponsors/components/sponsor-posts/sponsor-posts.component.scss
@@ -5,10 +5,21 @@
     width: 70%;
     background-color: $color-white;
     margin: auto auto 70px;
+    max-width: 60%;
 
     &.last-post {
       width: 80%;
       margin-bottom: 0;
+      max-width: 70%;
+      .thumbnail{
+        margin-bottom: 20px;
+      }
+      .sponsor-desc {
+        .excerpt {
+          max-height: 100%;
+          overflow: visible;
+        }
+      }
     }
 
     .sponsor-desc {
@@ -20,20 +31,20 @@
           padding: 13px;
           color: $color-white;
           text-align: center;
-          margin-bottom: 30px;
+          margin-bottom: 25px;
         }
       }
 
       h2 {
-        font-size: 26px;
+        font-size: 18px;
         font-weight: bold;
-        margin-bottom: 30px;
+        margin-bottom: 10px;
       }
 
       >span {
-        font-size: 18px;
+        font-size: 16px;
         display: block;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
         color: $dusty-gray;
         font-weight: bold;
       }
@@ -42,7 +53,7 @@
         margin-bottom: 28px;
 
         span {
-          font-size: 18px;
+          font-size: 16px;
           display: block;
           color: $dusty-gray;
         }
@@ -50,7 +61,7 @@
         a {
           display: inline-block;
           padding: 4px 15px;
-          font-size: 18px;
+          font-size: 16px;
           background: $color-primary;
           color: $color-white;
           font-weight: 500;
@@ -59,11 +70,14 @@
       }
 
       .excerpt {
-        font-size: 18px;
+        font-size: 16px;
         color: $dusty-gray;
+        max-height: 71px;
+        overflow: hidden;
+
 
         /deep/ p {
-          font-size: 18px;
+          font-size: 16px;
           color: $dusty-gray;
         }
       }
@@ -89,8 +103,19 @@
     .thumbnail {
       padding: 0;
 
-      img {
-        width: 100%;
+      .img-container {
+        padding-top: 75%;
+        position: relative;
+
+        img {
+          width: 100%;
+          position: absolute;
+          left: 0;
+          top: 0;
+          height: 100%;
+          -o-object-fit: cover;
+          object-fit: cover;
+        }
       }
     }
   }
