--- a/src/app/pages/video/containers/video-page/video-page.component.html
+++ b/src/app/pages/video/containers/video-page/video-page.component.html
@@ -22,7 +22,7 @@
                 Sponsored content from GlaxoSmithKline
               </div>
             </div>
-            <dsod-rating [rating]="(pageContent$ | async)?.avgCommentRating"></dsod-rating>
+            <dsod-rating [rating]="!avgRating?(pageContent$ | async)?.avgCommentRating:avgRating"></dsod-rating>
           </div>
           <div class="video-header article-header">
             <div class="row">
@@ -47,7 +47,7 @@
           </div>
         </div>
         <div *ngIf="isLoggedIn">
-          <dsod-article-reviews [content]="pageContent$ | async"></dsod-article-reviews>
+          <dsod-article-reviews [content]="pageContent$ | async" (updateRating)="updateRating($event)"></dsod-article-reviews>
         </div>
       </div>
       <div class="col-3">
