- implemented media preview feature for DSTP-480

--- a/src/app/pages/preview/components/article-preview.component.html
+++ b/src/app/pages/preview/components/article-preview.component.html
@@ -8,7 +8,16 @@
     </div>
   </div>
   <div *ngIf="content.featuredMedia" class="article-thumbnail" style="margin-top:20px;">
-    <img [src]=getUrl(content.featuredMedia.code.thumbnail) class="img-fluid" alt="">
+    <div *ngIf="content.featuredMedia" class="article-thumbnail" style="margin-top:20px;">
+      <img [src]=getUrl(content.featuredMedia.code.thumbnail) class="img-fluid" alt="">
+      <img *ngIf="content.featuredMedia?.type === '1' || content.featuredMedia?.type === '4'" [src]="getUrl(content.featuredMedia.code.thumbnail)" />
+      <audio *ngIf="content.featuredMedia?.type === '2'" controls>
+        <source [src]="getUrl(content.featuredMedia.code.thumbnail)" type="audio/mp3">
+      </audio>
+      <video *ngIf="content.featuredMedia?.type === '3'" width="100%" controls>
+        <source [src]="getUrl(content.featuredMedia.code.thumbnail)" type="video/mp4">
+      </video>
+    </div>
   </div>
   <div class="row">
     <div class="col-12">
