--- a/src/app/pages/preview/components/podcast-preview.component.html
+++ b/src/app/pages/preview/components/podcast-preview.component.html
@@ -2,18 +2,24 @@
   <div class="row">
     <div class="col-12">
       <div class="top-head mb-5 d-flex justify-content-between align-items-center ng-star-inserted">
-        <div class="pod-title d-flex align-items-center"><img alt="" src="assets/images/podcast-icon.png">
+        <div class="pod-title d-flex align-items-center">
+          <img alt="" src="assets/images/podcast-icon.png">
           <h3>Podcasts</h3>
-        </div><span>{{content.categoryName}}</span><span>{{content.title}}</span>
+        </div>
+        <span>{{content.categoryName}}</span>
+        <span>{{content.title}}</span>
       </div>
     </div>
   </div>
   <div class="row">
     <div class="col-2">
       <div>
-        <div class="speaker-thumbnail"><img alt="assets/images/speaker-avi.png" class="img-fluid" src="assets/images/Dr-Calleros_blk-wht.jpg">
+        <div class="speaker-thumbnail">
+          <img alt="assets/images/speaker-avi.png" class="img-fluid" src="assets/images/Dr-Calleros_blk-wht.jpg">
         </div>
-        <div class="speaker-name" *ngIf="content.author"><span>{{content.author.fullName}}</span></div>
+        <div class="speaker-name" *ngIf="content.author">
+          <span>{{content.author.fullName}}</span>
+        </div>
       </div>
     </div>
     <div class="col-8">
