--- a/src/app/pages/community/components/unite-viewer/unite-viewer-modal.component.html
+++ b/src/app/pages/community/components/unite-viewer/unite-viewer-modal.component.html
@@ -8,15 +8,20 @@
 
   <div class="modal-body" id="viewer-body">
     <div class="container">
-      <h2>{{magazine.contents[pageIndex].title}}</h2>
-      <span class="by" *ngIf="magazine.contents[pageIndex].author">by {{magazine.contents[pageIndex].author.fullName}}</span>
+      <div class="row">
+        <div class="col-9 ml-auto mr-auto">
+          <h2>{{magazine.contents[pageIndex].title}}</h2>
+          <span class="by" *ngIf="magazine.contents[pageIndex].author">by
+            {{magazine.contents[pageIndex].author.fullName}}</span>
+        </div>
+      </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-9">
+        <div class="col-9 ml-auto mr-auto">
           <img class="cover" [src]="getImageUrl(magazine.contents[pageIndex].featuredMedia?.code?.thumbnail)" class="img-fluid mb-3 mt-3"
             alt="">
-            <div class="article-content" [innerHTML]="magazine.contents[pageIndex].content"></div>
+          <div class="article-content" [innerHTML]="magazine.contents[pageIndex].content"></div>
         </div>
       </div>
     </div>
