--- a/src/app/shared/components/featured-media/featured-media.component.html
+++ b/src/app/shared/components/featured-media/featured-media.component.html
@@ -1,5 +1,6 @@
 <div class="article-thumbnail" *ngIf="featuredMedia">
-  <img src={{featuredMedia?.code?.originalUrl}} class="img-fluid w-100 mt-2 mb-3" alt="">
+<img *ngIf="featuredMedia?.type === '1' || featuredMedia?.type === '4'" class="img-fluid w-100 mt-2 mb-3" 
+  [src]="getUrl(featuredMedia.code.thumbnail)"  alt=""  />
   <video *ngIf="featuredMedia?.type === '3'" width="100%" controls>
     <source [src]="getUrl(featuredMedia.code.thumbnail)" type="video/mp4">
   </video>
