reduced size by 50%

--- a/src/app/pages/home/components/latest/latest.component.html
+++ b/src/app/pages/home/components/latest/latest.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="latest-block-thumbnail" *ngIf="latestTopics[0].featuredMedia">
       <img src={{latestTopics[0].featuredMedia.code.originalUrl}} class="img-fluid" alt="Feautred Thumbnail Large">
-      <a href="" class="read-about">
+      <a href="javascript:void(0)" class="read-about">
         <img src="assets/images/icons/{{latestTopics[0].contentTypeName}}.png" alt="">
       </a>
     </div>
