--- a/src/app/pages/article/components/article-media/article-media.component.html
+++ b/src/app/pages/article/components/article-media/article-media.component.html
@@ -3,7 +3,7 @@
     <li>Education /</li>
     <li>{{content.categoryName}}</li>
   </ul>
-  <dsod-rating [rating]="rating"></dsod-rating>
+  <dsod-rating [avgRating]="rating"></dsod-rating>
 </div>
 <div class="article-header" *ngIf="content">
   <div class="row">
