--- a/src/app/pages/home/components/our-sponsors/our-sponsors.component.html
+++ b/src/app/pages/home/components/our-sponsors/our-sponsors.component.html
@@ -26,7 +26,7 @@
         <section class="sponsors-ortho">
           <div>
             <dsod-media-content title="implant Dentisty" [placeholderImageSrc]="topic.featuredMedia.code.originalUrl"
-              [title]="topic.categoryName" [rating]="topic.avgCommentRating">
+              [title]="topic.categoryName" [topic]="topic">
             </dsod-media-content>
           </div>
         </section>
