--- a/src/app/layout/search/search-item/search-item.component.html
+++ b/src/app/layout/search/search-item/search-item.component.html
@@ -11,7 +11,7 @@
     <div class="col-7 pr-5">
       <div class="search-item-header">
         <h4>{{topic.categoryName}}</h4>
-        <dsod-rating></dsod-rating>
+        <dsod-rating [avgRating]="topic.avgCommentRating" [commentsCount]="topic.countOfComment"></dsod-rating>
       </div>
       <div class="search-item-content">
         <h2 class="topic-title mb-3">{{topic.title}}</h2>
