--- a/src/app/shared/components/reviews/add-review/add-review-modal.component.html
+++ b/src/app/shared/components/reviews/add-review/add-review-modal.component.html
@@ -1,7 +1,7 @@
 <div class="add-review">
   <div class="add-top-head">
     <span (click)="closeModal()">
-      <i class="fa fa-chevron-left" aria-hidden="false"></i>
+      <i class="fa fa-chevron-left" aria-hidden="true"></i>
     </span>
     <h3>ADD A REVIEW</h3>
   </div>
