--- a/src/app/pages/preview/components/content.scss
+++ b/src/app/pages/preview/components/content.scss
@@ -4,11 +4,9 @@
    /deep/ div {
      max-width: none !important;
      width: 100% !important;
-
      div {
        padding-top: 0 !important;
      }
-
       span {
         position: relative !important;
         top: auto !important;
@@ -19,71 +17,55 @@
         height: auto !important;
       }
    }
-
    /deep/ iframe {
      height: 70vh !important;
      position: relative !important;
    }
-
    /deep/ p {
      font-size: 20px;
-
-
      >img {
        width: 100%;
        height: auto;
      }
-
      &:nth-child(1) {
        display: block;
        font-size: 20px;
        line-height: 35px;
        margin-bottom: 25px;
      }
-
      &:nth-child(3) {
        color: $text-main;
        font-size: 20px;
        line-height: 35px;
        margin-bottom: 25px;
      }
-
      a {
        color: #0066cc;
        line-height: 35px;
        font-size: 22px;
      }
-
      &:last-child {
        margin-bottom: 40px;
      }
-
    }
-
    /deep/ pre {
      em {
        font-size: 20px;
      }
    }
-
    /deep/ h2 {
      font-size: 30px;
      color: $color-primary;
-
-     b,
-     strong {
+     b, strong {
        font-weight: 500;
      }
    }
-
    /deep/ figcaption {
      font-size: 22px;
    }
-
    /deep/ ol {
      padding: 0 0 0 60px;
      margin-top: 30px;
-
      li {
        position: relative;
        color: $text-main;
@@ -92,7 +74,6 @@
        padding: 0 50px 0 0;
        margin-bottom: 25px;
        list-style: disc;
-
        &::before {
          display: inline-block;
          font-size: 16px;
@@ -105,17 +86,14 @@
          line-height: 35px;
          font-weight: 700;
        }
-
        i {
          color: $color-primary;
        }
      }
    }
-
    /deep/ ul {
      padding: 0 0 0 60px;
      margin-top: 30px;
-
      li {
        position: relative;
        color: $text-main;
@@ -124,7 +102,6 @@
        padding: 0 50px 0 0;
        margin-bottom: 25px;
        list-style: disc;
-
        &::before {
          display: inline-block;
          font-size: 16px;
@@ -137,7 +114,6 @@
          line-height: 35px;
          font-weight: 700;
        }
-
        i {
          color: $color-primary;
        }
