--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,34 +19,26 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 h1 {
   font-size: 20px;
   font-weight: 600;
 }
-
 h2 {
   font-size: 17px;
   font-weight: 500;
 }
-
 body {
   font-size: 13px;
-  overflow-x: auto;
+  overflow: hidden auto;
   position: relative;
 }
-
 a {
   text-decoration: none !important;
 }
-
-
-
 .container {
   margin: 0 auto;
   padding: 0 15px;
 }
-
 h2.section-title {
   font-size: 24px;
   color: $boulder_grey;
@@ -56,13 +48,9 @@ h2.section-title {
   font-weight: bold;
   margin-bottom: 15px;
 }
-
-ul,
-li,
-ul li {
+ul, li, ul li {
   list-style: none;
 }
-
 .glide__arrows {
   .glide__arrow {
     padding: 0;
@@ -71,14 +59,11 @@ ul li {
     box-shadow: none;
   }
 }
-
 .p-t-115 {
   padding-top: 115px;
 }
-
 .top-head {
   padding: 20px 150px 20px 0;
-
   ul {
     li {
       display: inline-block;
@@ -87,41 +72,33 @@ ul li {
     }
   }
 }
-
 .block-wrap {
   height: 100%;
   padding-bottom: 30px;
 }
-
 .page-content {
   padding-top: 50px;
 }
-
 .hide-loader {
   display: none;
 }
-
 .viewer-modal {
   .modal-dialog {
     max-width: 100%;
     width: 100%;
     margin: 0;
-
     .modal-content {
       border: none;
       border-radius: 0;
-
       .modal-body {
         height: calc(100vh - 153px);
         overflow: hidden auto;
       }
-
       .modal-footer {
         .btn {
           width: auto;
           min-width: 120px;
         }
-
         .text-black {
           color: #000;
         }
@@ -129,38 +106,32 @@ ul li {
     }
   }
 }
-
 .datepicker-wrap {
   /deep/ .ngb-dp-arrow-btn {
     height: auto;
     color: $text-main;
   }
 }
-
 .datepicker-wrap {
   /deep/ .dropdown-menu {
     font-size: 13px;
     font-weight: 400;
   }
 }
-
 .create-event {
   .modal-dialog {
     max-width: 1000px;
   }
-
   .modal-body {
     padding: 50px;
   }
 }
-
 
 @media only screen and (min-width:1440px) {
   .container {
     max-width: 1380px;
   }
 }
-
 
 // Generic Media Querries for
 @media only screen and (max-width:1680px) {
@@ -175,16 +146,7 @@ ul li {
   }
 }
 
-
 @media only screen and (max-width:1199px) {
-  body {
-    overflow-x: scroll;
-  }
-
-  .site-wrap {
-    min-width: 1180px;
-  }
-
   .container {
     max-width: 100%;
     width: 100%;
