- fixed footer for DSTP-511

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -12,9 +12,9 @@
       </div>
       <div class="col-6 align-self-center">
         <ul class="ftr-nav">
-          <li><a [routerLink]="['about']">About</a></li>
+          <li><a [routerLink]="['about']">About Us</a></li>
           <li><a [routerLink]="['contact']">Contact Us</a></li>
-          <li><a [routerLink]="['terms']">Term of Use</a></li>
+          <li><a [routerLink]="['terms']">Terms of Use</a></li>
           <li><a [routerLink]="['privacy-policy']">Privacy Policy</a></li>
           <li><a [routerLink]="['adpolicy']">Ad Policy</a></li>
         </ul>
@@ -28,6 +28,6 @@
         </ul>
       </div>
     </div>
-    <p class="copyrights text-lg-center">©2018 DSO Dentist. All Rights Reserved.</p>
+    <p class="copyrights text-lg-center">©2019 DSO Dentist. All Rights Reserved.</p>
   </div>
 </footer>
